# openvm-witness-gens

./: Cargo.toml
crates/base_alu_core/: Cargo.toml  README.md  SET_AND_EXECUTE_DOCUMENTATION.md
crates/base_alu_core/src/: harness.rs  main.rs
crates/base_alu_full/: Cargo.toml
crates/base_alu_full/src/: harness.rs  lib.rs  main.rs
crates/base_alu_full/src/arch/: test.rs
