[package]
name = "base_alu_core"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm-circuit = { workspace = true, features = ["test-utils"] }
openvm-rv32im-transpiler = {workspace = true}
openvm-rv32im-circuit = {workspace = true}
openvm-circuit-primitives = { workspace = true}
rand = "0.8.5"
